<resources>
    <string name="app_name">Forest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello fragmento vacio</string>
    <string name="swipe_left_for_register">Swipe a la izquierda para Registrarse\nA la derecha si olvido su contraseña</string>
    <string name="swipe_left_for_login">Swipe a la izquierda para Login</string>
    <string name="login">Login</string>
    <string name="password">Clave</string>
    <string name="e_mail">Email</string>
    <string name="tag">Unetenos y mejora \nTu vida con tus compras</string>
    <string name="swipe_right_for_login">Swipe a la derecha para Login</string>
    <string name="register">Registrarse</string>
    <string name="re_type_password">Re-escriba la clave</string>
    <string name="your_name">Nombre Completo</string>
    <string name="your_username">Usuario</string>
    <string name="your_birthdate">Nacio el</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="suplidor">Suplidor</string>
    <string name="olvidar_contrasena">Olvide la contraseña</string>
    <string name="olvidar_contrasena_soportte">Ingrese su Telefono\nPara enviar código</string>
    <string name="telefono">Telefono</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="usuario">Usuario</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
